# SecureDNA

./: .earthlyignore  .env  .gitattributes  .github_changelog_generator  .gitignore  .prettierrc.yaml  Cargo.toml  Earthfile  LICENSE-MIT  README.md  biome.json  docker-compose.yml  flake.nix  justfile  rust-toolchain.toml
crates/awesome_hazard_analyzer/: Cargo.toml  README.md
crates/awesome_hazard_analyzer/src/: log.rs  main.rs
crates/base64_helper/: Cargo.toml
crates/base64_helper/src/: lib.rs
crates/certificate_client/: Cargo.toml  README.md
crates/certificate_client/src/: common.rs  default_filename.rs  default_filepath.rs  inspect.rs  key.rs  lib.rs  passphrase_reader.rs
crates/certificate_client/src/shims/: create_cert.rs  create_key.rs  create_token.rs  error.rs  inspect_cert.rs  inspect_token.rs  merge_cert.rs  mod.rs  retrieve_cert_request.rs  sign_cert.rs  sign_token.rs
crates/certificate_client/tests/: integration_tests.rs
crates/certificates/: Cargo.toml  README.md
crates/certificates/src/: asn.rs  certificate_chain.rs  chain.rs  chain_item.rs  digest.rs  display.rs  ecies.rs  error.rs  file.rs  format.rs  issuance_checks.rs  issued.rs  key_state.rs  key_traits.rs  keypair.rs  lib.rs  pem.rs  revocation.rs  test_helpers.rs  traversal.rs  utility.rs  validation_error.rs  validation_failure.rs
crates/certificates/src/certificate/: certificate_bundle.rs  certificate_chain.rs  mod.rs
crates/certificates/src/shared_components/: common.rs  digest.rs  mod.rs  role.rs
crates/certificates/src/tokens/: mod.rs  token.rs  token_bundle.rs
crates/certificates/tests/: check_test_certs.rs
crates/doprf/: .earthlyignore  Cargo.toml  README.md
crates/doprf/bench/: .gitignore  bench.sh  hazards.fragset  monkeypox_partial.seqs
crates/doprf/src/: active_security.rs  lagrange.rs  lib.rs  party.rs  prf.rs  tagged.rs
crates/doprf/src/shims/: genactivesecuritykey.rs  genkey.rs  genkeyshares.rs  mod.rs  unimplemented.rs
crates/doprf_client/: Cargo.toml  clippy.toml
crates/doprf_client/src/: doprf_client.rs  error.rs  instant.rs  lib.rs  operations.rs  retry_if.rs  scep_client.rs  server_version_handler.rs
crates/doprf_client/src/progress/: mod.rs  native.rs  wasm.rs
crates/doprf_client/src/server_selection/: bad_flag.rs  dns.rs  mod.rs  refreshable.rs
crates/doprf_client/src/windows/: aa.rs  dna.rs  expansions.rs  mod.rs
crates/doprf_client/tests/: test_integration.rs
crates/hdb/: Cargo.toml
crates/hdb/src/: consolidate_windows.rs  database.rs  entry.rs  exemption.rs  hlt.rs  lib.rs  metadata.rs  response.rs  synthesis_permission.rs  tags.rs
crates/hdb/src/shims/: genhdb.rs  genindex.rs  mod.rs  unimplemented.rs  unused_hlt_indices.rs
crates/hdb/src/snapshots/: hdb__response__tests__generates_correct_response_exemption.snap  hdb__response__tests__generates_correct_response_insufficient_exemption.snap  hdb__response__tests__generates_correct_response_multiple_subentry.snap  hdb__response__tests__generates_correct_response_multiple_subentry_organism_not_likely.snap  hdb__response__tests__generates_correct_response_single_subentry.snap
crates/hdbserver/: Cargo.toml  example-config.toml
crates/hdbserver/src/: lib.rs  opts.rs  qualification.rs  screening.rs  server.rs  state.rs  validation.rs
crates/hdbserver/src/event_store/: migration-00.sql  migration-01.sql  mod.rs
crates/http_client/: Cargo.toml
crates/http_client/src/: api_client.rs  error.rs  lib.rs
crates/keyserver/: Cargo.toml  example-config.toml  example-revocations.toml
crates/keyserver/src/: keyserve.rs  lib.rs  opts.rs  qualification.rs  server.rs  state.rs
crates/minhttp/: Cargo.toml
crates/minhttp/examples/: example-config.toml  httpserver.rs  mpserver.rs  signal.rs
crates/minhttp/src/: error.rs  lib.rs  nursery.rs  response.rs  server.rs  signal.rs  test.rs
crates/packed_ristretto/: Cargo.toml
crates/packed_ristretto/src/: datatype.rs  error.rs  lib.rs  packable.rs
crates/performance_tests/: Cargo.toml  README.md  config.json-example-complete-localhost  config.json-example-hdb-localhost  config.json.example-client-localhost  config.json.example-keyserver-localhost
crates/performance_tests/doc/: goose_faq.md  loadtest_config.md
crates/performance_tests/src/: lib.rs
crates/performance_tests/tests/: perftest_test.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: certs.rs  lib.rs  open_events.rs  statistics.rs
crates/pipeline_bridge/: Cargo.toml
crates/pipeline_bridge/src/: lib.rs
crates/scep/: Cargo.toml
crates/scep/src/: base64.rs  cookie.rs  error.rs  lib.rs  mutual_authentication.rs  nonce.rs  states.rs  steps.rs  types.rs
crates/scep_client_helpers/: Cargo.toml
crates/scep_client_helpers/src/: certs.rs  lib.rs  scep_client.rs
crates/scep_integration_tests/: Cargo.toml
crates/scep_integration_tests/src/: lib.rs  make_certs.rs  mock_screening.rs  server.rs
crates/scep_integration_tests/tests/: bad_protocol.rs  happy.rs  revoked_cert.rs  wrong_cert.rs  wrong_keyserver_id.rs
crates/scep_server_helpers/: Cargo.toml
crates/scep_server_helpers/src/: certs.rs  error.rs  lib.rs  request.rs  server.rs
crates/scurl/: Cargo.toml
crates/scurl/src/: main.rs
crates/shared_types/: Cargo.toml
crates/shared_types/src/: error.rs  et.rs  hash.rs  hdb.rs  http.rs  lib.rs  logging.rs  metrics.rs  requests.rs  server_selection.rs  server_versions.rs  synthesis_permission.rs
crates/statin/: Cargo.toml
crates/statin/src/: main.rs
crates/streamed_ristretto/: Cargo.toml
crates/streamed_ristretto/src/: contenttype.rs  hyper.rs  lib.rs  reqwest.rs  stream.rs  util.rs  web_sys.rs
crates/synthclient/: Cargo.toml  README.md  example-config.toml
crates/synthclient/src/: fetch.rs  lib.rs  ncbi.rs  parsefasta.rs  rate_limiter.rs  retry_if.rs  windows.rs
crates/system_tests/: Cargo.toml  README.md
crates/system_tests/tests/: synth_client_test.rs
crates/wasm_bindings/certificates/: Cargo.toml  README.md
crates/wasm_bindings/quickdna/: Cargo.toml  README.md
crates/wasm_bindings/screening/: Cargo.toml  README.md
(+770 files in other folders)
