[workspace]
members = [
    "crates/*",
    "crates/wasm_bindings/certificates",
    "crates/wasm_bindings/quickdna",
    "crates/wasm_bindings/screening",
]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
version = "1.0.8"
publish = false

[workspace.dependencies]
again = { git = "https://github.com/SecureDNA/again", rev = "6db8c5e56bf93b1177ed35a926f8ff7d4adbf93b" }
curve25519-dalek = "4.1.3"
http = "1.1.0"
http-body-util = "0.1.0"
hyper = "1.3.1"
quickdna = { git = "https://github.com/SecureDNA/quickdna", default-features = false }
rasn = "0.10.0"
serde = "1.0"
tempfile = "3.6.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[profile.release-with-debug]
inherits = "release"
debug = true
overflow-checks = true

[patch.crates-io]
wasm-bindgen = { git = "https://github.com/lynn/wasm-bindgen.git", branch = "securedna" }
