[package]
name = "awesome_hazard_analyzer"
version = { workspace = true }
publish = { workspace = true }
license = { workspace = true }
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.5.0", features = ["derive", "cargo"] }
csv = "1.3.0"
flate2 = "1.0.27"
futures = "0.3.27"
itertools = "0.12.0"
rayon = "1.10.0"
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
thiserror = "1.0.47"
time = "0.3.28"
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["local-time"] }


quickdna = { workspace = true, default-features = false }

doprf = { path = "../doprf" }
# used for consolidating hit regions only, remove after functionality moved to hdb
doprf_client = { path = "../doprf_client" }
hdb = { path = "../hdb" }
shared_types = { path = "../shared_types" }

[features]
default = []
run_system_tests = []
