[package]
name = "certificate-client"
version = { workspace = true }
publish = { workspace = true }
license = { workspace = true }
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive", "cargo"] }
dirs = "5.0.1"
rasn = { workspace = true }
rpassword = "7.3.1"
serde = "1.0.188"
thiserror = "1.0.47"
time = "0.3.28"
certificates = { path = "../certificates" }
doprf = { path = "../doprf" }
rtoolbox = "0.0.2"
once_cell = "1.19.0"
serde_json = "1.0.94"

[dev-dependencies]
anyhow = "1.0.75"
assert_cmd = "2.0.12"
tempfile = { workspace = true }
temp-env = "0.3.6"

[target.'cfg(unix)'.dev-dependencies]
faketime = "0.2.1"
rexpect = "0.5.0"

[features]
env_passphrase = []

[[bin]]
name = "sdna-create-key"
path = "src/bin/create_key.rs"

[[bin]]
name = "sdna-create-cert"
path = "src/bin/create_cert.rs"

[[bin]]
name = "sdna-inspect-cert"
path = "src/bin/inspect_cert.rs"

[[bin]]
name = "sdna-sign-cert"
path = "src/bin/sign_cert.rs"

[[bin]]
name = "sdna-retrieve-cert-request"
path = "src/bin/retrieve_cert_request.rs"

[[bin]]
name = "sdna-merge-cert"
path = "src/bin/merge_cert.rs"

[[bin]]
name = "sdna-create-token"
path = "src/bin/create_token.rs"

[[bin]]
name = "sdna-inspect-token"
path = "src/bin/inspect_token.rs"

[[bin]]
name = "sdna-sign-token"
path = "src/bin/sign_token.rs"
