[package]
name = "certificates"
version = { workspace = true }
publish = { workspace = true }
license = { workspace = true }
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519 = { version = "2.2.2", features = ["pkcs8", "alloc", "zeroize"] }
ed25519-dalek = {version = "2.1.0", features = ["rand_core"]}
getrandom = { version = "0.2.10", features = ["wasm-bindgen", "js"] }
hex = "0.4.3"
itertools = "0.12.0"
paste = "1.0.14"
pathfinding = "4.3.0"
pem = "3.0.2"
pkcs8 = { version = "0.10.2", features = ["pkcs5", "encryption", "alloc"] }
rand = "0.8.5"
rasn = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
serde_with = "3.6.0"
thiserror = "1.0.47"
time = { version = "0.3.28", features = ["formatting"] }

quickdna = { workspace = true, features = ["serde"] }
doprf = { path = "../doprf" }

[dev-dependencies]
ecies = {version = "0.2.6", default-features = false, features = ["pure"]}
once_cell = "1.19.0"
tempfile = { workspace = true }
libc = "0.2.152"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.64"

[package.metadata.cargo-udeps.ignore]
normal = ["paste"]
