[package]
name = "doprf"
version = { workspace = true }
publish = { workspace = true }
license = { workspace = true }
edition = "2021"

[features]
default = ["centralized_keygen"]
centralized_keygen = []
wasm = ["getrandom/wasm-bindgen"]

[dependencies]
base64 = "0.22.0"
base64_helper = { path = "../base64_helper" }
clap = { version = "4.5.0", features = ["derive"] }
curve25519-dalek = {workspace = true, features = ["digest", "rand_core"]}
hex = "0.4"
rand = "0.8.5"
rasn = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha3 = "0.10.8"
subtle = "2.5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = "0.2"

[dev-dependencies]
criterion = "0.5"
quickcheck = "1.0"
serde_json = "1.0.108"
itertools = "0.12.0"
