[package]
name = "doprf_client"
version = { workspace = true }
publish = { workspace = true }
license = { workspace = true }
edition = "2021"

[features]
default = ["centralized_keygen"]
centralized_keygen = []

[dependencies]
again = { workspace = true }
async-trait = "0.1.73"
bytes = "1"
clap = { version = "4.5.0", features = ["derive", "cargo"] }
dns-parser = "0.8.0"
futures = "0.3.27"
futures-timer = "3.0.2"
rand = "0.8.5"
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
thiserror = "1.0.47"
tokio = { version = "1", default-features = false }
tracing = { workspace = true }

certificates = { path = "../certificates" }
doprf = { path = "../doprf" }
http_client = { path = "../http_client" }
packed_ristretto = { path = "../packed_ristretto", default-features = false }
quickdna = { workspace = true, default-features = false }
scep = { path = "../scep" }
scep_client_helpers = { path = "../scep_client_helpers" }
shared_types = { path = "../shared_types" }
streamed_ristretto = { path = "../streamed_ristretto" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12.5", features = ["cookies", "json"] }
tokio = { version = "1", default-features = false, features = ["full"] }

streamed_ristretto = { path = "../streamed_ristretto", features = ["reqwest"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures-timer = { version = "3.0.2", features = ["wasm-bindgen"] }
getrandom = { version = "0.2", features = ["js"] }
js-sys = { version = "0.3.64" }
# not a direct dependency, used by `rand`, but enables rand to get the random seed
# from the browser or node, if we're running in WASM
# https://github.com/rust-random/rand#wasm-support
serde-wasm-bindgen = "0.6.0"
tokio = { version = "1", default-features = false, features = [
  "sync",
  "macros",
] }
wasm-bindgen = { version = "0.2.87" }
wasm-bindgen-futures = { version = "0.4.37" }
web-sys = { version = "0.3.64", features = ["console", "MessagePort"] }

doprf = { path = "../doprf", features = ["wasm"] }
streamed_ristretto = { path = "../streamed_ristretto", features = ["web-sys"] }

[dev-dependencies]
quickcheck = "1.0"
tempfile = { workspace = true }

hdb = { path = "../hdb" }
hdbserver = { path = "../hdbserver" }
keyserver = { path = "../keyserver" }
minhttp = { path = "../minhttp" }
pipeline_bridge = { path = "../pipeline_bridge" }
quickdna = { workspace = true, default-features = false, features = [
  "quickcheck",
] }
tracing.workspace = true
tracing-subscriber = "0.3.18"
