[package]
name = "hdbserver"
version = { workspace = true }
publish = { workspace = true }
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bytes = "1.6.0"
clap = { version = "4.5.0", features = ["cargo", "derive", "env"] }
form_urlencoded = "1.2.0"
futures = "0.3.28"
http-body-util = { workspace = true }
hyper = { workspace = true }
once_cell = "1.19.0"
pin-project = "1.1.3"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0.47"
time = "0.3.28"
tokio = { version = "1.39.2", features = ["full"] }
toml = "0.8.12"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
yubico = { version = "0.11.0" }

certificates = { path = "../certificates" }
doprf = { path = "../doprf" }
hdb = { path = "../hdb" }
minhttp = { path = "../minhttp" }
persistence = { path = "../persistence" }
scep = { path = "../scep" }
scep_server_helpers = { path = "../scep_server_helpers" }
securedna_versioning = { path = "../securedna_versioning" }
shared_types = { path = "../shared_types", features = ["http"] }
streamed_ristretto = { path = "../streamed_ristretto", features = ["hyper"] }

[dev-dependencies]
tempfile = { workspace = true }
totp-rs = "5.6.0"

scep_client_helpers = { path = "../scep_client_helpers" }

[features]
run_network_tests = []
