[package]
name = "http_client"
edition = "2021"
license.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
async-trait = "0.1.73"
bytes = "1"
futures = "0.3.27"
serde = "1"
serde_json = "1"
thiserror = "1.0.47"

streamed_ristretto = { path = "../streamed_ristretto" }
packed_ristretto = { path = "../packed_ristretto", default-features = false }
shared_types = { path = "../shared_types" }
format_serde_error = { version = "0.3.0", default-features = false, features = ["serde_json", "graphemes_support"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "^0.11.20", features = ["cookies", "json"] }
tracing.workspace = true

shared_types = { path = "../shared_types", features = ["reqwest"] }
streamed_ristretto = { path = "../streamed_ristretto", features = ["reqwest"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3.64" }
serde-wasm-bindgen = "0.6.0"
wasm-bindgen = { version = "0.2.87" }
wasm-bindgen-futures = { version = "0.4.37" }
web-sys = { version = "0.3.64", features = [
  "DedicatedWorkerGlobalScope",
  "Headers",
  "Request",
  "RequestCredentials",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
] }

streamed_ristretto = { path = "../streamed_ristretto", features = ["web-sys"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
