[package]
name = "keyserver"
version = { workspace = true }
publish = { workspace = true }
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bytes = "1.6.0"
clap = { version = "4.5.0", features = ["cargo", "derive", "env"] }
futures = "0.3.28"
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["http1", "server"] }
num_cpus = "1.16.0"
serde = { workspace = true }
serde_json = "1.0"
tokio = { version = "1.39.2", features = ["full"] }
toml = "0.8.12"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

certificates = { path = "../certificates" }
doprf = { path = "../doprf" }
minhttp = { path = "../minhttp" }
scep = { path = "../scep" }
scep_server_helpers = { path = "../scep_server_helpers" }
securedna_versioning = { path = "../securedna_versioning" }
shared_types = { path = "../shared_types", features = ["http"] }
streamed_ristretto = { path = "../streamed_ristretto", features = ["hyper"] }
persistence = { path = "../persistence" }

[dev-dependencies]
scep_client_helpers = { path = "../scep_client_helpers" }
