[package]
name = "minhttp"
version = { workspace = true }
publish = { workspace = true }
edition = "2021"

[dependencies]
anyhow = "1.0.75"
futures = "0.3.28"
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["http1", "server"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
thiserror = "1.0.47"
tokio = { version = "1.36.0", features = ["io-util", "macros", "rt-multi-thread", "signal", "sync"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { version = "1.36.0", features = ["time"] }
tracing-subscriber = { workspace = true }
