[package]
name = "minhttp"
version = { workspace = true }
publish = { workspace = true }
edition = "2021"

[dependencies]
anyhow = "1.0.75"
futures = "0.3.28"
hex = "0.4.3"
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["http1", "server"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
serde = { workspace = true, features = ["derive"] }
sha2 = "0.10.8"
smallvec = { version = "1.13.2", features = ["const_generics"] }
thiserror = "1.0.47"
tokio = { version = "1.37.0", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "sync"] }
toml = "0.8.12"
tracing = { workspace = true }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["time"] }
tracing-subscriber = { workspace = true }
