[package]
name = "minhttp"
version = { workspace = true }
publish = { workspace = true }
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.5.0", features = ["derive", "env"] }
futures = "0.3.28"
hex = "0.4.3"
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["http1", "server"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
rustls = { version = "0.23", default-features = false, features = ["tls12", "ring"] }
rustls-pemfile = "2"
serde = { workspace = true, features = ["derive"] }
sha2 = "0.10.8"
smallvec = { version = "1.13.2", features = ["const_generics"] }
thiserror = "1.0.47"
tokio = { version = "1.39.2", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "sync"] }
tokio-rustls = { version = "0.26", default-features = false }
toml = "0.8.12"
tracing = { workspace = true }

[dev-dependencies]
clap = { version = "4.5.0", features = ["cargo", "derive", "env"] }
tokio = { version = "1.39.2", features = ["time"] }
tracing-subscriber = { workspace = true }
