[package]
name = "packed_ristretto"
version = { workspace = true }
publish = { workspace = true }
license = { workspace = true }
edition = "2021"

[dependencies]
crc32fast = "1.4.0"
serde = { workspace = true }
thiserror = "1.0.47"

doprf = { path = "../doprf" }

[dev-dependencies]
quickcheck = "1.0"
