[package]
name = "persistence"
edition = "2021"
license.workspace = true
version.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.30.0", features = ["bundled"] }
rusqlite_migration = "1.1.0"
tokio-rusqlite = "0.5.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.57"
time = "0.3.34"

certificates = { path = "../certificates" }
shared_types = { path = "../shared_types" }
