[package]
name = "pipeline_bridge"
version = { workspace = true }
publish = { workspace = true }
license = { workspace = true }
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
smartstring = { version = "1.0.1", features = ["serde"] }

[dev-dependencies]
version_check = { version = ">= 0.9.4" } # fix smartstring build: https://github.com/bodil/smartstring/issues/30#issuecomment-1080194045
