[package]
name = "scep"
edition = "2021"
license.workspace = true
version.workspace = true
publish.workspace = true


[dependencies]
base64_helper = { path = "../base64_helper" }
certificates = { path = "../certificates" }
doprf = { path = "../doprf" }
shared_types = { path = "../shared_types" }

anyhow = "1.0.75"
base64 = "0.22.0"
bytes = "1.5.0"
cookie = "0.18.0"
hex = "0.4.3"
rand = "0.8.5"
serde = { workspace = true }
serde_json = "1.0"
thiserror = "1.0.47"
tracing = { workspace = true }
