[package]
name = "scep_client_helpers"
edition = "2021"
license.workspace = true
version.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
certificates = { path = "../certificates" }
doprf = { path = "../doprf" }
http_client = { path = "../http_client" }
packed_ristretto = { path = "../packed_ristretto", default-features = false }
scep = { path = "../scep" }
shared_types = { path = "../shared_types", default-features = false }

anyhow = "1.0.75"
bytes = "1.5.0"
cookie = "0.18.0"
include_dir = "0.7.3"
once_cell = "1.19.0"
serde_json = "1"
thiserror = "1.0.47"
tracing = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
