[package]
name = "shared_types"
version = { workspace = true }
publish = { workspace = true }
license = { workspace = true }
edition = "2021"

[dependencies]
base64 = "0.22.0"
http = { version = "1.0.0", optional = true }
once_cell = "1.19.0"
prometheus = "0.13.3"
regex = "1.10.3"
reqwest = { version = "0.11.20", optional = true }
serde = { workspace = true, features = ["derive"] }
serde_plain = "1.0.1"
thiserror = "1.0.47"
time = { version = "0.3.28", features = ["local-offset", "formatting"] }
uuid = {version = "1.8.0", features = ["v4"]}
doprf = {path = "../doprf"}
pipeline_bridge = { path = "../pipeline_bridge" }
log = "0.4.20"

[dev-dependencies]
serde_json = "1.0"
quickcheck = "1.0"
