[package]
name = "shared_types"
version = { workspace = true }
publish = { workspace = true }
license = { workspace = true }
edition = "2021"

[dependencies]
base64 = "0.22.0"
http = { version = "1.0.0", optional = true }
once_cell = "1.19.0"
prometheus = "0.13.3"
regex = "1.10.3"
serde = { workspace = true, features = ["derive"] }
serde_plain = "1.0.1"
thiserror = "1.0.47"
uuid = {version = "1.10.0", features = ["v4"]}

certificates = { path = "../certificates" }
doprf = {path = "../doprf"}
pipeline_bridge = { path = "../pipeline_bridge" }

[dev-dependencies]
serde_json = "1.0"
quickcheck = "1.0"
