[package]
name = "streamed_ristretto"
version = { workspace = true }
publish = { workspace = true }
edition = "2021"

[dependencies]
bytes = "1.5.0"
futures = "0.3.28"
http = "1.0.0"
http-body-util = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
pin-project = "1.1.3"
reqwest = { version = "^0.11.20", features = ["stream"], optional = true }
thiserror = "1.0.47"
tinyvec = { version = "1.6.0", features = ["rustc_1_57"] }
web-sys = { version = "0.3.63", features = ["Headers"], optional = true }

doprf = { path = "../doprf" }

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"

[features]
hyper = ["dep:http-body-util", "dep:hyper"]
