[package]
name = "synthclient"
version = { workspace = true }
publish = { workspace = true }
license = { workspace = true }
edition = "2021"

[features]
default = ["native"]
native = [
  "clap",
  "prometheus",
]
wasm = [
  "again/wasm-bindgen",
  "getrandom/js",
  "js-sys",
  "wasm-bindgen-futures",
  "wasm-bindgen",
  "web-sys",
]
[[bin]]
name = "synthclient"
required-features = ["native"]

[dependencies]
again = { workspace = true }
anyhow = "1.0.75"
bytes = "1.6.0"
clap = { version = "4.5.0", features = ["derive", "cargo", "env"], optional = true }
futures = "0.3.28"
getrandom = "0.2"
humantime = "2.1.0"
prometheus = { version = "0.13.3", optional = true }
quickdna = { workspace = true, default-features = false }
serde = "^1"
serde_json = "^1"
thiserror = "1.0.47"
tokio = { version = "1", default-features = false, features = ["sync"] }
uuid = { version = "1.8.0", features = ["v4"] }

certificates = { path = "../certificates" }
doprf = { path = "../doprf" }
doprf_client = { path = "../doprf_client" }
http_client = { path = "../http_client" }
pipeline_bridge = { path = "../pipeline_bridge" }
scep_client_helpers = { path = "../scep_client_helpers" }
securedna_versioning = { path = "../securedna_versioning" }
shared_types = { path = "../shared_types" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
form_urlencoded = "1.2.0"
http-body-util = { workspace = true }
hyper = { workspace = true }
minhttp = { path = "../minhttp" }
once_cell = "1.19.0"
regex = "1.10.3"
reqwest = { version = "0.11.20" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = "2.5.0"

persistence = { path = "../persistence" }
shared_types = { path = "../shared_types", features = ["http", "reqwest"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
async-std = "1.12.0"
js-sys = { version = "0.3.64", optional = true }
parking_lot = { version = "0.11", features = ["wasm-bindgen"] }
rand = "0.8.5"
wasm-bindgen = { version = "0.2.87", optional = true }
wasm-bindgen-futures = { version = "0.4.37", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.64"
optional = true
features = [
  "console",
  "Blob",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]

[dev-dependencies]
assert-json-diff = "2.0.2"
quickcheck = "1.0"
quickdna = { workspace = true, features = ["quickcheck"] }
