[package]
name = "system_tests"
version = { workspace = true }
publish = { workspace = true }
license = { workspace = true }
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
run_system_tests = []

[dependencies]
anyhow = "1.0.75"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }

certificates = { path = "../certificates" }
pipeline_bridge = { path = "../pipeline_bridge" }
shared_types = { path = "../shared_types" }
synthclient = { path = "../synthclient" }
once_cell = "1.19.0"
