[package]
name = "certificates_wasm"
description = "WebAssembly bindings for SecureDNA certificates code"
version = { workspace = true }
publish = { workspace = true }
license = { workspace = true }
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
certificates = { path = "../../certificates" }
console_error_panic_hook = "0.1.7"
js-sys = "0.3.64"
rasn = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
tracing = { workspace = true }
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.87"
