[package]
name = "quickdna_wasm"
description = "WebAssembly bindings for quickdna"
version = { workspace = true }
publish = { workspace = true }
license = { workspace = true }
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.64"
quickdna = { workspace = true, features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
wasm-bindgen = "0.2.87"
