[package]
name = "screening_wasm"
description = "WebAssembly bindings for screening"
version = { workspace = true }
publish = { workspace = true }
license = { workspace = true }
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
doprf_client = { path = "../../doprf_client" }
http_client = { path = "../../http_client" }
js-sys = "0.3.64"
quickdna = { workspace = true, features = ["serde"] }
scep_client_helpers = { path = "../../scep_client_helpers" }
securedna_versioning = { path = "../../securedna_versioning" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
shared_types = { path = "../../shared_types", default-features = false }
synthclient = { path = "../../synthclient", default-features = false, features = ["wasm"] }
tracing = { workspace = true }
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wasm-bindgen-test = "0.3.40"
